# fpinhaskell

./: README.md  fpinhaskell.cabal  pbcopy
src/: GettingStarted.hs
src/DataStructures/: List.hs  Tree.hs
src/ErrorHandling/: Either.hs  Option.hs
test/: GettingStartedSpec.hs
test/DataStructures/: ListSpec.hs  TreeSpec.hs
test/ErrorHandling/: EitherSpec.hs  OptionSpec.hs
