name:                fpinhaskell
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
copyright:           (c) 2016 Tom Wadeson
author:              Tom Wadeson <tom@tomwadeson.com>
maintainer:          Tom Wadeson <tom@tomwadeson.com>
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     GettingStarted
                     , DataStructures.List
                     , DataStructures.Tree
                     , ErrorHandling.Option
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite hspec-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , fpinhaskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tomwadeson/fpinhaskell
